--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,88 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="16dp"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo2x"
+        app:layout_constraintBottom_toTopOf="@+id/ll_container_fields"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:id="@+id/ll_container_fields"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
 
+        <EditText
+            android:id="@+id/et_email"
+            style="@style/EditTextFormField"
+            android:background="@drawable/bg_form_field_top"
+            android:hint="User"
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/et_password"
+            style="@style/EditTextFormField"
+            android:layout_marginTop="-1dp"
+            android:background="@drawable/bg_form_field_bottom"
+            android:inputType="textPassword"
+            android:imeOptions="actionDone"
+            android:hint="Password"/>
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/bt_login"
+        style="@style/ButtonForm"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="50dp"
+        android:text="Login"
+        app:layout_constraintEnd_toEndOf="@+id/ll_container_fields"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/ll_container_fields"
+        app:layout_constraintTop_toBottomOf="@+id/ll_container_fields" />
+
+
+    <RelativeLayout
+        android:visibility="gone"
+        android:elevation="10dp"
+        android:id="@+id/all_load"
+        android:background="@color/shadowBack"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:elevation="5dp"
+            android:id="@+id/rl_item_load"
+            android:background="@drawable/bg_form_field_bottom_corners"
+            android:layout_centerInParent="true"
+            android:layout_width="120dp"
+            android:layout_height="120dp">
+
+            <ProgressBar
+                android:layout_centerInParent="true"
+                android:id="@+id/indeterminateBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
